refactor: secure getAllNinja and update related tests